# arbitrage-detector

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  TODOS.md  docker-compose.yml
src/: aggregator.rs  arbitrage.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  utils.rs
src/arbitrage/: evaluator.rs  mod.rs  types.rs
src/cex/: binance.rs  mod.rs
src/dex/: calc.rs  client.rs  mod.rs  state.rs
