[package]
name = "arbitrage-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
 tokio = { version = "1", features = ["full"] }
 ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
 tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 dotenvy = "0.15"
 bigdecimal = "0.4"
 anyhow = "1"
 thiserror = "1"
 futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
url = "2"
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math", version = "0.6.1" }
alloy-primitives = "1.3.0"

